<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvLblTotalQuestions"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:text="@string/tvLblTotalQuestions"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvTotalQuestions"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:text="@string/tvTotalQuestions"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvLblCorrectAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:text="@string/tvLblCorrectAnswer"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvCorrectAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:text="@string/tvCorrectAnswer"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnRestart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btnRestart"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDefinition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tvDefinition"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple_500"
                android:textSize="26sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioTermGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <RadioButton
                    android:id="@+id/radioTermOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/radioTermOne"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioTermTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/radioTermTwo"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioTermThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/radioTermThree"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioTermFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/radioTermFour"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:enabled="false"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/btnConfirm"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>