<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvLabelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tvLabelName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple_500"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#E6E6E6"
            android:ems="0"
            android:hint="@string/etUserName"
            android:inputType="textPersonName"
            android:labelFor="@id/tvLabelName"
            android:textAlignment="center"
            android:textSize="30sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btnStart"
            android:textSize="36sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>